Fix scene controls breaking layout on tablet.

--- a/src/styles/components/_scene_controls.scss
+++ b/src/styles/components/_scene_controls.scss
@@ -41,7 +41,6 @@
         width: 100%;
 
         @include media(medium) {
-            grid-row: 2/-1;
             grid-column: 1/-1;
             max-width: 440px;
         }
